2008-12-05
	* New functionality of add memo to File category and Code category.
	
2008-12-04
	* Better handler colors for coding and case-mark. Now can customize colors for coding-mark 
	(set .rqda$fore.col, default is "blue") and case-mark (set .rqda$back.col, default is "gray92").
	* Add selected file to File-category by popup menu in Files Tab.
	* Popup menu in Cases tab to link files with selected case.
	* Drop selected Files from Files.of.This.Case Widget by clicking popu menu.
	
2008-12-03
	* Attached file to case by pop-up menu in Files Tab.
	* Now can open associated files of a case from Cases Tab.
	* new function of write.FileList() to import a batch of files.

	
2008-12-01
	* enhance the rename buttons.
	* bugfix of add buttons: continue only when click confirm in the ginput widget.
	* New function write.FileList() to import files by batch.
	* Enchance the retrieval2 function so coding on the file (openned by clicking back button) is possible.
	
2008-11-30
	* fix some minor bugs.
	
2008-11-29
	* enhancement of function list.deleted() and pdelete()
	* better handle the encoding issue in ViewFileButton and handler for openning a file.
	* Add F-Cat (file-category) to help organized the files.
	* Add doubleclick handlers to CodeOfCat and FileOfCat to retrieve coding and open file.
	* fix typo (Thanks Adrian Dusa)
	* fix a minor bug of CodeNamesUpdate() and new_proj().
	
2008-11-25
	* Take care of the warning from R CMD check
	
2008-11-24
	* Can back to the original file from Retrieved text chunck (by retrieval2 function).
	
2008-11-23 (as version 0.1.5)
	* Add AddTo/DropFrom Buttons for Code-Category.
	* Improve the display of retrieved coding.
	
2008-11-22
	* change "Add Code Category" Button to popup menu
	* Open selected file by double click.
	* Retrieve coding chuck by double click.
	* Add/rename/delete Buttons for Code-Category.
	
2008-11-21
	* Add WebSearch Case button (for convienence)
	* Add "Add Code Category" Button
	
2008-11-19 (as verion 0.1.4)