@@ -8,7 +8,5 @@ Merge *rqda from different coders.
 
 inter-coder reliability 
 
-unmark button in Cases Tab
-
 ### less important
 should add document on the table structure.
