@@ -47,6 +47,7 @@ h1 {
 <li>Show the temporary deletion files and codes
 <li>Undo the temporary deletion
 <li>Permanently erase the temporary deletion
+<li>Import a batch of files (function write.FileList)
 
 <p>Other functions may be added with the development of the software in the future. Click <A HREF="ChangeLog.txt">here</A> to see the <B>new features</B>.
 
@@ -116,8 +117,7 @@ order to use RQDA.
 
 <p>
 <h1>Screenshots</h1>
-<P ALIGN=LEFT STYLE="margin-bottom: 0cm"><IMG SRC="Main.png" NAME="Main GUI" ALIGN=LEFT  BORDER=0><BR CLEAR=LEFT><BR>
-</P>
+<A HREF="Main.png" target="_blank">Main Window</A>
 
 </BODY>
 </HTML>
